# swagger.json
@@ -1076,6 +1076,34 @@
           }
         }
       },
+      "post": {
+        "description": "Endpoint to create an Istio object by using an Istio Config item",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "config"
+        ],
+        "operationId": "istioConfigCreateSubtype",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/istioConfigDetailsResponse"
+          },
+          "201": {
+            "$ref": "#/responses/istioConfigDetailsResponse"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
       "delete": {
         "description": "Endpoint to delete the Istio Config of an Istio object used for templates and adapters",
         "produces": [
@@ -1247,6 +1275,34 @@
           },
           "400": {
             "$ref": "#/responses/badRequestError"
+          },
+          "404": {
+            "$ref": "#/responses/notFoundError"
+          },
+          "500": {
+            "$ref": "#/responses/internalError"
+          }
+        }
+      },
+      "post": {
+        "description": "Endpoint to create an Istio object by using an Istio Config item",
+        "produces": [
+          "application/json"
+        ],
+        "schemes": [
+          "http",
+          "https"
+        ],
+        "tags": [
+          "config"
+        ],
+        "operationId": "istioConfigCreate",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/istioConfigDetailsResponse"
+          },
+          "201": {
+            "$ref": "#/responses/istioConfigDetailsResponse"
           },
           "404": {
             "$ref": "#/responses/notFoundError"
